Corrigir_Bug_checkbox

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             <div class="pass-settings">
                 <label class="tittle">Pass Settings</label>
                 <ul class="options">
+                    <li class="option1">
+                        <input type="checkbox" id="lowercase" checked>
+                        <label for="lowercase">Minuscula (a-z)</label>
+                    </li>
                     <li class="option">
                         <input type="checkbox" id="lowercase" checked>
                         <label for="lowercase">Minuscula (a-z)</label>
@@ -51,7 +55,9 @@
                     <li class="option">
                         <input type="checkbox" id="spaces" checked>
                         <label for="spaces">Incluir espaços</label>
+                        <input type="hidden" value="">
                     </li>
+                    
                     
                 </ul>
             </div>
